<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/image_menu"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/title_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/title"
        style="@style/bodyfont"
        app:layout_constraintStart_toEndOf="@id/image_menu"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/price_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        style="@style/bodyfont2"
        android:text="@string/price"
        app:layout_constraintStart_toEndOf="@id/image_menu"
        app:layout_constraintTop_toBottomOf="@id/title_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>