<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/greeting"
                style="@style/headingfont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/hai_ilyasa"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/offering"
                style="@style/bodyfont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/mau_makan_apa_hari_ini"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/greeting" />

            <androidx.cardview.widget.CardView
                android:id="@+id/menupromo"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="7dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/offering">

                <ImageView
                    android:id="@+id/promo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/discount_banner"
                    android:scaleType="fitXY"
                    android:src="@drawable/foodiesfeed_com_coffee_latte_with_croissant" />


                <TextView
                    android:id="@+id/textdisc"
                    style="@style/headingfont"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="25dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/diskon_30"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/textdescdisc"
                    style="@style/bodyfont"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/pesan_makanan_dengan_aplikasi_dan_dapatkan_diskonmu"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleview_horizontal"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/menupromo" />

            <TextView
                android:id="@+id/listmakanan"
                style="@style/headingfont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/list_menu_makanan"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recycleview_horizontal" />

            <ImageView
                android:id="@+id/gridlist"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/promo_banner"
                android:src="@drawable/baseline_grid_view_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recycleview_horizontal" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleview_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@id/gridlist"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>